Massive resource refactoring
r4387
2018-07-04

# CHANGES
1. Refactor all maps and lists having to do with resources
   - Convert AmountResource, ItemResource, or Part into Integer class
     so as to simplify and speed up looking for a particulare resource.
2. Add eventAdded(int index, SimpleEvent event) in
   HistoricalEventListener
   - Still transitioning from calling classes that have
     eventAdded(int index, HistoricalEvent event)
3. Rename convertEvent() to convert2SimpleEvent() in
   HistoricalEventManager.
4. Rename getRange() in Rover to getRoverRange() to delineate from the
   getRange() in Vehicle.
5. Set the first ItemResource id (or part id) in PartConfig's
   constructor as the last resource id + 1.
6. Add numerous methods in ItemResourceUtil.
7. Add getItemResourceNum(int id) and
   storeItemResources(int id, int number) in Inventory.
8. Set MAX_AMOUNT_RESOURCE to 1000 in ResourceUtil, Task and Mission.
9. Update tilesfx to 1.6.2

# FIX
1. Prevent null in TaskSchedule by setting work shift to OFF in
   buryBody() in Person.
2. Fix null when starting a RescueSalvageVehicle() when no reserve
   vehicle is available.
   - Enable reserveVehicle() to return true or false in VehicleMission.
3. Fix null in addPersonOrRobotToMalfunctionLocation() in
   RepairMalfunction.
   - Prevent a repair bot from having a null task phase if the
     building is an astronomy observatory.
4. Correct getEstimatedTravelDistancePerSol() in Vehicle.
5. Correct unrealistic vehicle drive range
   - Divide drivetrainEfficiency by 100% when computing range in
     getrange() in Vehicle.